# presets

./: .travis.yml  .travis_dependencies.sh  LICENSE  README.md  presets.py  setup.cfg  setup.py
.github/: environment-ci.yml
.github/workflows/: ci.yml  lint_python.yml  publish.yml
docs/: Makefile  api.rst  changes.rst  conf.py  index.rst
presets/: __init__.py  version.py
tests/: test.py  test_presets.py
tests/preset_test/: __init__.py  secondmod.py  submod.py
