[tool:pytest]
addopts = -v --cov-report term-missing --cov presets


[metadata]
name = presets
version = attr: presets.version
description = A python module to manipulate default parameters of a module's functions
long_description = file: README.md
author = Brian McFee
url = http://github.com/bmcfee/presets
download_url = http://github.com/bmcfee/presets/releases
license = ISC
license_file = LICENSE
license_file_content_type = text/markdown; charset=UTF-8
classifiers = 
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13


[options]
packages = find:
python_requires >= 3.8

[options.extras_require]
docs =
    numpydoc

tests = 
    coverage
    pytest
    pytest-cov
